[tool.poetry]
name = "ajo-bot"
version = "1.0.0"
description = "Count your ajo stats!"
authors = ["axel <axl89@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/lastlife/ajobot"

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.9.0"
disnake = "^2.4.0"
loguru = "^0.6.0"
python-dotenv = "^0.19.2"
aioredis = "^2.0.1"
ajobot-manager = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"

[tool.taskipy.tasks]
start = "python -m src"
lint = "black . && isort --profile black ."

[tool.black]
line-length = 120

[tool.pyright]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
